# noodle2

./: .claude_settings.json  .gitignore  .session_complete  ACHIEVEMENT_108_VERIFICATIONS.txt  ACHIEVEMENT_109_VERIFICATIONS.txt  ACHIEVEMENT_110_VERIFICATIONS.txt  ACHIEVEMENT_111_VERIFICATIONS.txt  ACHIEVEMENT_112_VERIFICATIONS.txt  ACHIEVEMENT_113_VERIFICATIONS.txt  ACHIEVEMENT_114_VERIFICATIONS.txt  ACHIEVEMENT_115_VERIFICATIONS.txt  ACHIEVEMENT_116_VERIFICATIONS.txt  ACHIEVEMENT_117_VERIFICATIONS.txt  ACHIEVEMENT_118_VERIFICATIONS.txt  ACHIEVEMENT_119_VERIFICATIONS.txt  ACHIEVEMENT_120_VERIFICATIONS.txt  ACHIEVEMENT_121_VERIFICATIONS.txt  ACHIEVEMENT_122_VERIFICATIONS.txt  ACHIEVEMENT_123_VERIFICATIONS.txt  ACHIEVEMENT_124_VERIFICATIONS.txt  ACHIEVEMENT_125_VERIFICATIONS.txt  ACHIEVEMENT_126_VERIFICATIONS.txt  ACHIEVEMENT_127_VERIFICATIONS.txt  ACHIEVEMENT_128_VERIFICATIONS.txt  ACHIEVEMENT_129_VERIFICATIONS.txt  ACHIEVEMENT_130_VERIFICATIONS.txt  ACHIEVEMENT_131_VERIFICATIONS.txt  ACHIEVEMENT_132_VERIFICATIONS.txt  ACHIEVEMENT_133_VERIFICATIONS.txt  ACHIEVEMENT_134_VERIFICATIONS.txt  ACHIEVEMENT_135_VERIFICATIONS.txt  ACHIEVEMENT_136_VERIFICATIONS.txt  ACHIEVEMENT_137_VERIFICATIONS.txt  ACHIEVEMENT_139_VERIFICATIONS.txt  ACHIEVEMENT_140_VERIFICATIONS.txt  ACHIEVEMENT_142_VERIFICATIONS.txt  ACHIEVEMENT_143_VERIFICATIONS.txt  ACHIEVEMENT_144_VERIFICATIONS.txt  ACHIEVEMENT_145_VERIFICATIONS.txt  ACHIEVEMENT_146_VERIFICATIONS.txt  (+995 more)
harness_logs/: diagnosis_F116.json  diagnosis_unknown.json  escalation_state.json  progress_tracker.json  research_F115_F116.md  summary.txt
presentation/: generate_pptx.py  noodle2_results.md
session_217_artifacts/: MILESTONE_74_VERIFICATIONS.txt  QUICK_REFERENCE.txt  SESSION_217_FINAL_REPORT.txt  VERIFICATION_CERTIFICATE.txt
src/: __init__.py  cli.py
(+531 files in other folders)
